src/snapshots/vm__parser__test__parse_binary_operations-13.snap
---
source: src/parser.rs
expression: "binary_operation_expr(\"a >= b\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 6,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: BinaryOp(
                GtEq,
                Ast {
                    node: Ident(
                        u!("a"),
                    ),
                    span: LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "a",
                        extra: (),
                    },
                },
                Ast {
                    node: Ident(
                        u!("b"),
                    ),
                    span: LocatedSpan {
                        offset: 5,
                        line: 1,
                        fragment: "b",
                        extra: (),
                    },
                },
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "a >= b",
                extra: (),
            },
        },
    ),
)
