src/snapshots/vm__parser__test__parse_binary_operations-16.snap
---
source: src/parser.rs
expression: "binary_operation_expr(\"a * b + c\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 9,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: BinaryOp(
                Add,
                Ast {
                    node: BinaryOp(
                        Mul,
                        Ast {
                            node: Ident(
                                u!("a"),
                            ),
                            span: LocatedSpan {
                                offset: 0,
                                line: 1,
                                fragment: "a",
                                extra: (),
                            },
                        },
                        Ast {
                            node: Ident(
                                u!("b"),
                            ),
                            span: LocatedSpan {
                                offset: 4,
                                line: 1,
                                fragment: "b",
                                extra: (),
                            },
                        },
                    ),
                    span: LocatedSpan {
                        offset: 4,
                        line: 1,
                        fragment: "b + c",
                        extra: (),
                    },
                },
                Ast {
                    node: Ident(
                        u!("c"),
                    ),
                    span: LocatedSpan {
                        offset: 8,
                        line: 1,
                        fragment: "c",
                        extra: (),
                    },
                },
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "a * b + c",
                extra: (),
            },
        },
    ),
)
