src/snapshots/vm__parser__test__parse_binary_operations-21.snap
---
source: src/parser.rs
expression: "binary_operation_expr(\"(a || b) && c\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 13,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: BinaryOp(
                LogicalAnd,
                Ast {
                    node: Group(
                        Ast {
                            node: BinaryOp(
                                LogicalOr,
                                Ast {
                                    node: Ident(
                                        Ident(
                                            "a",
                                        ),
                                    ),
                                    span: LocatedSpan {
                                        offset: 1,
                                        line: 1,
                                        fragment: "a",
                                        extra: (),
                                    },
                                },
                                Ast {
                                    node: Ident(
                                        Ident(
                                            "b",
                                        ),
                                    ),
                                    span: LocatedSpan {
                                        offset: 6,
                                        line: 1,
                                        fragment: "b",
                                        extra: (),
                                    },
                                },
                            ),
                            span: LocatedSpan {
                                offset: 1,
                                line: 1,
                                fragment: "a || b",
                                extra: (),
                            },
                        },
                    ),
                    span: LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "(a || b)",
                        extra: (),
                    },
                },
                Ast {
                    node: Ident(
                        Ident(
                            "c",
                        ),
                    ),
                    span: LocatedSpan {
                        offset: 12,
                        line: 1,
                        fragment: "c",
                        extra: (),
                    },
                },
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "(a || b) && c",
                extra: (),
            },
        },
    ),
)
