src/snapshots/vm__parser__test__parse_binary_operations-26.snap
---
source: src/parser.rs
expression: "binary_operation_expr(\"a && b = c\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 6,
            line: 1,
            fragment: " = c",
            extra: (),
        },
        Ast {
            node: BinaryOp(
                LogicalAnd,
                Ast {
                    node: Ident(
                        Ident(
                            "a",
                        ),
                    ),
                    span: LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "a",
                        extra: (),
                    },
                },
                Ast {
                    node: Ident(
                        Ident(
                            "b",
                        ),
                    ),
                    span: LocatedSpan {
                        offset: 5,
                        line: 1,
                        fragment: "b",
                        extra: (),
                    },
                },
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "a && b",
                extra: (),
            },
        },
    ),
)
